# hh-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/rate-limit/: .env-example  README.md  test_rate_limits.py
src/hh_parser/: __init__.py  __main__.py  main.py
src/hh_parser/api/: __init__.py  client.py  client_keys.py  datatypes.py  errors.py  user_agent.py
src/hh_parser/cli/: __init__.py  config.py  main.py  utils.py
src/hh_parser/cli/commands/: __init__.py  authorize.py  export.py  migrate_db.py  parse.py  parse_contacts.py  reference.py  whoami.py
src/hh_parser/contacts/: __init__.py  api_extractor.py  config.py  deduplication.py  exceptions.py  extractors.py  keywords.py  site_parser.py
src/hh_parser/operations/: __init__.py  authorize.py  export.py  migrate_db.py  parse.py  parse_contacts.py  reference.py  whoami.py
src/hh_parser/parsers/: __init__.py  deduplication.py  exceptions.py  extractors.py
src/hh_parser/parsers/employer_sites/: __init__.py  site_parser.py
src/hh_parser/parsers/hh_api/: __init__.py  api_extractor.py
src/hh_parser/storage/: facade.py  utils.py
src/hh_parser/storage/models/: __init__.py  base.py  contact.py  employer.py  vacancy.py
src/hh_parser/storage/queries/: schema.sql  schema_contacts.sql
src/hh_parser/storage/repositories/: __init__.py  base.py  contacts.py  employers.py  errors.py  settings.py  vacancies.py
src/hh_parser/utils/: __init__.py  cookiejar.py  date.py  json.py  log.py  terminal.py
