[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-parser"
version = "0.1.0"
description = "HH parser"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "urllib3",
    "playwright",
]

[project.urls]
"Homepage" = "https://example.com"

[project.scripts]
hh-parser = "hh_parser.__main__:main"