[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-parser"
version = "0.1.0"
description = "Парсер для сбора данных о работодателях и контактах с сайта hh.ru"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    {name = "WLAXID"}
]
keywords = ["hh.ru", "parser", "data extraction", "contacts", "employers", "hr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
	"requests",
	"urllib3",
	"playwright",
	"beautifulsoup4",
	"lxml",
	"typer",
	"rich",
	"questionary",
	"dotenv",
]

[project.urls]
Homepage = "https://github.com/WLAXID/hh-parser"
Repository = "https://github.com/WLAXID/hh-parser"
Issues = "https://github.com/WLAXID/hh-parser/issues"

[project.scripts]
hh-parser = "hh_parser.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
